  app archive. 
- Scrubbed Armitage to eliminate unnecessary blocking calls from Sleep
  source code. This improves Armitage's responsiveness and takes away
  many opportunities for deadlock.
- Sync Files for Loot and Downloads is now much better with large files
- REJOICE! After more than three years of a team server capability, 
  Armitage now tells you when you are disconnected from a server. 
  
27 Feb 14 (tested against msf git revision: 72da8299a5)
---------
- Armitage console is now a mouse hot spot. Right-click a host in the
  console to see its menu. Click a module to open the module's launcher
- Armitage module launch console ignores false meterpreter prompt from
  msfrpcd after a successful exploit job is run.
- hashdump and wdigest menus now add usernames with spaces to database
  thanks to Steve Pinkham for reporting this issue *with* a fix.
- Added [host] -> Login -> psexec (psh) to use psexec_psh to authenticate
  to a host.
- Armitage.app for MacOS X now works with Oracle's Java 1.7
- Long awaited! I've added a feature to change LHOST in Armitage. Go to
  Armitage -> Listeners -> Set LHOST.
- IPv6 reverse sessions now associate with their host properly.
- Windows open with Ctrl+W now show the Armitage icon
- Armitage now uses a JFrame to display its dialogs. This will give each
  window its own button in the taskbar regardless of window manager.

21 Nov 13 (tested against msf git revision: 597eb56dcf)
---------
- Fixed webcam selection logic that I broke last update. Go me!
- Added a helper for PATH option
- Java 1.6 is no longer a supported environment to run Armitage. Added
  a warning message to indicate as much. You should update to Java 1.7
- Connect dialog now masks the password field.
- Armitage no longer allows you to start msfrpcd on Windows. It shows an
  error stating that you need to connect to a team server on Linux.
- Fixed a potential deadlock when opening a module launcher dialog.